[tool.poetry]
name = "ros2_utils"
version = "0.1.0"
description = ""
authors = ["ktro2828 <kotaro.uetake@tier4.jp>"]

[tool.poetry.dependencies]
python = "^3.8"
numpy = "^1.23.5"
PyYAML = "^6.0"
matplotlib = "^3.6.2"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
black = "^22.10.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
